--- a/index.html
+++ b/index.html
@@ -128,13 +128,13 @@
         <div class="portfolio-container transition3">
             <div class="portfolio-left">
                 <div class="inner">
-                    <p class="subtitle">kiran App</p>
+                    <a href="https://github.com/Kaluripraveen/-Cricket-Data-Analytics-Project.git"><p class="subtitle">Cricket Data-Analytics Project</p></a>
 
-                    <p class="featured-title">kiran.com</p>
-                    <p class="featured-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit sint, molestias qui nihil accusamus praesentium vel tenetur quisquam quas rem.</p>
+                    <p class="featured-title">DataScience Project</p>
+                    <p class="featured-desc">I have used cricket T20 world cup (2022) data to build a dashboard of batsmen based on their performance(Strike Rate, boundary%, ..),I have used bright data web scraping to collect data from website(espncricinfo) then i performed some data transformation and cleaning in pandas, followed by building dashboards in power bi.</p>
                 </div>
             </div>
-            <a href="#"><img src="images.jpg" alt="Fretastic"></a>
+            <a href="#"><img src="styles/dashboard.png" alt="Fretastic"></a>
         </div>
         
     </section>
